# iqdeepdive-foundryiq

./: .env.sample  .gitignore  AGENTS.md  ATTRIBUTION.md  README.md  azure.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
infra/: create-fabric-data-agent.py  create-fabric-graph.py  create-lakehouse.py  create-search-indexes.py  create-toolbox-fabriciq-ontology.py  create-toolbox-workiq.py  create-toolbox.py  main.bicep  main.parameters.json  postdeploy.py  setup-env.py
infra/core/ai/: ai-project.bicep  connection.bicep
infra/core/fabric/: fabric-capacity.bicep
infra/core/search/: azure_ai_search.bicep
infra/core/storage/: storage.bicep
infra/hooks/: postdeploy.ps1  postdeploy.sh  postprovision.ps1  postprovision.sh
notebooks/: foundryiq-fabricdataagent.ipynb  part1-standard-foundry-iq-kb.ipynb  part2-search-mcp-kb.ipynb  part3-fabric-iq-to-kb.ipynb  part4-work-iq-to-kb.ipynb  part5-work-iq-fabric-iq-to-kb.ipynb
scripts/: check_repo.py  query-fabric-data-agent.py
src/agent-foundry-iq-api/: main.py
src/agent-foundry-iq-fabric-toolbox/: main.py
src/agent-foundry-iq-mcp/: main.py
src/agent-foundry-iq-toolbox/: main.py
src/agent-foundry-iq-workiq-toolbox/: main.py
src/agent-foundryiq-workiq-toolbox/: main.py  pyproject.toml
src/agent-workiq-toolbox/: main.py  pyproject.toml  uv.toml  workiq_consent.py
src/hr-agent/: .agentignore  main.py  pyproject.toml
