[project]
name = "iqdeepdive-foundryiq"
version = "0.1.0"
description = "Provisioning helpers for Foundry IQ notebooks and an HR hosted agent"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.2",
    "azure-search-documents==12.1.0b1",
    "azure-storage-file-datalake>=12.23.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
]

[dependency-groups]
dev = [
    "pyyaml>=6.0.3",
    "ruff>=0.15.0",
]

[tool.uv]
package = false

[tool.ruff]
extend-exclude = ["notebooks"]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
